<resources>
    <string name="app_name" translatable="false">Farm Hub</string>
    <string name="farmhub_logo" translatable="false">Farmhub Logo</string>
    <string name="back" translatable="false">Back</string>
    <string name="home" translatable="false">Home</string>
    <string name="schedule" translatable="false">Schedule</string>
    <string name="market" translatable="false">Market</string>
    <string name="expenses" translatable="false">Expenses</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="pre_order" translatable="false">Pre Order</string>

    <string name="product_image" translatable="false">Product Image</string>
    <string name="placeholder_product_name" translatable="false">Product Name</string>
    <string name="placeholder_product_id" translatable="false">Product ID</string>
    <string name="placeholder_seller" translatable="false">Seller</string>
    <string name="placeholder_address" translatable="false">Address</string>
    <string name="placeholder_price" translatable="false">Price</string>

    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>